--- a/views/templates/recipe.handlebars
+++ b/views/templates/recipe.handlebars
@@ -1,97 +1,98 @@
 <div class="modal-container">
 
-    <div class="modal-body">
+        <div class="modal-body">
+    
+            <button class='delete-button'>
+                <i class='tiny material-icons'>close</i>
+            </button>
+    
+            <div class="recipe-head row">
+    
+                <!-- {{!-- Image / visual information --}} -->
+                <div class="visual-info-container col s12 m6 l8">
 
-        <button class="delete-btn">
-            <i class="material-icons">close</i>
-        </button>
-
-        <div class="recipe-head">
-
-            {{!-- Image / visual information --}}
-            <div class="visual-info-container">
-                
-                <div class="image-container">
-                    <img class="recipe-img"src="{{imgUrl}}" alt="recipe image">
-                    <div class="serves-overlay">
-                        <span>Serves:{{serves}}</span><i class="material-icons">person_add</i>
+                    <div class="image-container">
+                        <img id="recipe-img"  src="https://www.onceuponachef.com/images/2017/12/NY-Cheesecake-760x574.jpg" alt="recipe image">
+                        <div class="serves-overlay">
+                            <span>Serves:{{serves}}</span><i class="material-icons">person_add</i>
+                        </div>
+                    </div>
+    
+                    <div class="time-bar-container">
+                        <div class="mask">
+                            <p>{{prepTime.value}}{{prepTime.unit}} | {{cookTime.value}}{{prepTime.unit}}</p>
+                        </div>
+                        <p id="cookTime"></p>
+                        <p id="prepTime"></p>
+                        <svg class="timeBar" width="1" height="1">
+                            <path id="prepPath" fill="none" stroke="#ff6347" stroke-width="15" />
+                            <path id="cookPath" fill="none" stroke="#008000" stroke-width="15" />
+                        </svg>
+                        <div id="timer-icon-container">
+                            <i id="timer-icon"class="material-icons">timer</i>
+                        </div>
+                    </div>
+                 
+                </div>
+    
+                <div class="recipe-info col s12 m6 l4">
+                    <!-- {{!-- title --}} -->
+                    <h4 class="title">{{title}}</h4>
+        
+                    <!-- {{!-- Button box --}} -->
+                    <div class="button-box">
+        
+                        <button class="favourite-btn">
+                            <i class="tiny material-icons right">favorite_border</i>favourite
+                        </button>
+        
+                        <button class="shopping-list-btn">
+                            <i class="tiny material-icons right">add</i>Shopping List
+                        </button>
+        
+                        <button class="meal-planning-btn">
+                            <i class="tiny material-icons right">add</i>Planner
+                        </button>
+        
                     </div>
                 </div>
-
-                <div class="time-bar-container">
-                    <div class="mask">
-                        <p>{{prepTime.value}}{{prepTime.unit}} | {{cookTime.value}}{{prepTime.unit}}</p>
-                    </div>
-                    <i class="material-icons">timer</i>
-                    <svg width="600" height="600">
-                        <path id="prepTime" fill="none" stroke="#ff6347" stroke-width="15" />
-                    </svg>
-                    <svg width="600" height="600">
-                        <path id="cookTime" fill="none" stroke="#008000" stroke-width="15" />
-                    </svg>
+    
+            </div>
+    
+            <!-- {{!-- Diet Tags --}} -->
+            <div class="diet-tags">
+                {{#dietTags}}
+                    <div class="diet-tag">{{tag}}</div>
+                {{/dietTags}}
+            </div>
+    
+            <!-- {{!-- Main Content --}} -->
+            <div class="recipe-content">
+    
+                <!-- {{!-- ingredients --}} -->
+                <div>
+                    <h4>Ingredients</h4>
+                    <ul class="method-list">
+                        {{#ingredients}}
+                            <li class="ingredient">{{name}} - {{amount}} {{unit}}</li>
+                        {{/ingredients}}
+                    </ul>
                 </div>
-
+                <!-- {{!-- Method --}} -->
+                <div>
+                    <h4>Method</h4>
+                    <ul class="method-list">
+                        {{#method}}
+                            <li class="step">
+                                <h6 class="step-title">Step {{index}}</h6>
+                                <p class="step-text">{{step}}</p>
+                            </li>
+                        {{/method}}
+                    </ul>
+                </div>
+    
             </div>
-
-            {{!-- title --}}
-            <h4>{{title}}</h4>
-
-            {{!-- Button box --}}
-            <div class="button-box">
-
-                <button class="favourite-btn">
-                    favourite this recipe
-                    <i class="medium material-icons">favorite_border</i>
-                </button>
-
-                <button class="shopping-list-btn">
-                    Shopping List
-                    <i class="medium material-icons">add</i>
-                </button>
-
-                <button class="meal-planning-btn">
-                    Meal Planner
-                    <i class="medium material-icons right">add</i>
-                </button>
-
-            </div>
-
+    
         </div>
-
-        {{!-- Diet Tags --}}
-        <div class="diet-tags">
-            {{#dietTags}}
-                <div class="diet-tag">{{tag}}</div>
-            {{/dietTags}}
-        </div>
-
-        {{!-- Main Content --}}
-        <div class="recipe-content">
-
-            {{!-- ingredients --}}
-            <div>
-                <h4>Ingredients</h4>
-                <ul class="method-list">
-                    {{#ingredients}}
-                        <li class="ingredient">{{name}} - {{amount}} {{unit}}</li>
-                    {{/ingredients}}
-                </ul>
-            </div>
-            {{!-- Method --}}
-            <div>
-                <h4>Method</h4>
-                <ul class="method-list">
-                    {{#method}}
-                        <li class="step">
-                            <h6 class="step-title">Step {{index}}</h6>
-                            <p class="step-text">{{step}}</p>
-                        </li>
-                    {{/method}}
-                </ul>
-            </div>
-
-        </div>
-
+    
     </div>
-
-</div>
