--- a/Public/assets/css/nav.css
+++ b/Public/assets/css/nav.css
@@ -77,6 +77,7 @@ nav>h3 {
 
 /* ---------------------- sticky footer ----------------------------- */
 .footer {
+    padding:10px;
     z-index:1;
     position:fixed;
     left:0px;
