--- a/Public/assets/css/dashboard/dashboard.css
+++ b/Public/assets/css/dashboard/dashboard.css
@@ -11,6 +11,7 @@ main {
     padding:0 10px 30px 10px;
     margin-bottom: 30px;
     border-radius: 10px;
+    background-color: #cb4745;
 }
 
 /* this is all mobile stuff!!! */
@@ -65,10 +66,15 @@ main {
     display: none;
 }
 
+body {
+    background-color: #8f4623;
 
+}
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-
+    body{
+        background-color: white;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
