implemented recipe-card's into the dashboard and the index.html

--- a/Public/assets/css/dashboard/desktop.css
+++ b/Public/assets/css/dashboard/desktop.css
@@ -1,6 +1,6 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-    /* Here we change everything to a desktop design */
+    /* ---------- revert the mobile-design schema and change everything to a desktop design -------------- */
     .mobile-name{
         display: none;
     }
@@ -19,9 +19,7 @@
         width:fit-content;
         display:block;
     }
-    .recipe-card {
-        border: 5px solid black;
-    }
+
     .dow-cards {
         display: flex;
         justify-content: space-around;
@@ -34,6 +32,59 @@
 
     .lunch {
         flex-direction: row-reverse;
+    }
+/* ------------------------ recipe-card ------------------------ */
+    .recipe-card {
+        border:none;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        width:200px;
+        height:200px;
+        border-radius: 25px;
+        transition: all 400ms ease-in-out;
+        /* transition bg-colour */
+        background-color: #bca990;
+    }
+    
+    .recipe-title {
+        width:100%;
+        text-align: center;
+        font-size: 1.2rem;
+        position:absolute;
+        color:white;
+        bottom:0;
+        background-color: hsla(0,0%,0%,0.3);
+        transition: inherit;
+    }
+    
+    .recipe-card > img {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        transition: inherit;
+    }
+    
+    .overlay {
+        opacity: 0;
+        color: #cb4745;
+        position:absolute;
+        transition: inherit;
+    }
+    
+    /* -------- transition effects --------------- */
+    .recipe-card:hover > .overlay {
+        opacity: 1;
+        cursor: pointer;
+    }
+    
+    .recipe-card:hover > img, .recipe-card:hover .recipe-title {
+        opacity: 0;
+        cursor: pointer;
+        transform: scale(2);
     }
 }
 
