created two javascript files for handling recipe-modal logic

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -102,7 +102,7 @@
             {{!-- Recipe card template --}}
             <div class="recipe-card" data-id="{{recipe.id}}">
               <img src="https://i2.wp.com/www.downshiftology.com/wp-content/uploads/2020/03/Teriyaki-Chicken-6.jpg" alt="">
-              <p class="recipe-title">Chicken Teriyaki</p>
+              <p class="recipe-title">{{recipe.title}}</p>
               <p class="overlay">View Recipe</p>
             </div>
 
