--- a/Public/assets/css/dashboard/mobile.css
+++ b/Public/assets/css/dashboard/mobile.css
@@ -4,6 +4,7 @@ body {
     /* background-color: #8f4623; */
     background-image: url(../../images/chopping-board-4k.jpg);
     background-position: center;
+    background-size: contain;
 }
 
 .dow-title{
