--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
     <script src="./../../public/assets/javascript/createRecipe.js"></script>
     <script src="./../../public/assets/javascript/dashboard-logic.js"></script>
     <script src="./../../public/assets/javascript/renderTimeBar.js"></script>
+    <script src="./../../public/assets/javascript/local-storage.js"></script>
     <script src="./../../public/assets/javascript/openModal.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
