--- a/Public/assets/css/dashboard/mobile.css
+++ b/Public/assets/css/dashboard/mobile.css
@@ -8,6 +8,7 @@ body {
 }
 
 .dow-title{
+    margin:0;
     text-align: center;
 }
 
@@ -17,7 +18,7 @@ main {
 
 .dow {
     height: fit-content;
-    padding:0 8% 30px 8%;
+    padding:0 5% 40px 5%;
     margin-bottom: 30px;
     border-radius: 10px;
     /* background-color: #8f4623; */
@@ -83,7 +84,7 @@ main {
 
 
 .mobile-name {
-    width: calc(60vw - 50px);
+    width: calc(60vw - 100px);
     margin: 0;
     margin-bottom:20px;
     padding-left:30px;
@@ -110,15 +111,15 @@ main {
 .recipe-card {
     padding-top: 10px;
     text-align:center;
-    border-radius: 50%;
-    width:50px;
-    height:50px;
+    border-radius: 15px;
+    width:75px;
+    height:75px;
     background-color: transparent;
     border:2px solid #94ab36
 }
 
 .mobile-layout {
-    margin-bottom:-15px;
+    margin-bottom:-30px;
     height:fit-content;
     width:100%;
     display:flex;
