added css for login-screen

--- a/Public/assets/css/login/style.css
+++ b/Public/assets/css/login/style.css
@@ -10,6 +10,38 @@
   color:#94ab36;
 }
 
+.layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  align-items: center;
+}
+
+.sign-up, .sign-in {
+  margin-top: 4rem;
+}
+
+.sign-up > h4, .sign-in > h4 {
+  margin-top:0;
+}
+
+.sign-in {
+  width:80%;
+  padding:0 2rem 4rem 2rem;
+  border-bottom:2px solid black
+}
+
+.sign-up {
+  text-align: center;
+  width:100%;
+  margin-bottom: 4rem;
+}
+
+#sign-up-btn {
+  margin-top:2rem;
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
   
@@ -20,6 +52,28 @@
     font-size: 3rem;
     bottom:0;
   }
+
+  .layout {
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .sign-up {
+    padding-left:4rem;
+    width:100%;
+  }
+
+  .sign-in {
+    padding:0 4rem 0 0;
+    width:100%;
+    border-right:2px solid black;
+    border-bottom:none;
+  }
+
+  small{
+    display: block;
+  }
+  
 }
 
 /* Large devices (desktops, 992px and up) */
