--- a/Public/assets/css/buttons.css
+++ b/Public/assets/css/buttons.css
@@ -1,3 +1,7 @@
+:root {
+    --button-colour:#94ab36;
+}
+
 .delete-button{
     width:fit-content;
     height:auto;
@@ -15,4 +19,10 @@
 .delete-button:hover, .delete-button:focus, .delete-button:active {
     background-color: transparent;
     transform: scale(1.5);
+}
+
+.btn {
+    background-color:var(--button-colour);
+    cursor: pointer;
+    object-position: center;
 }
