--- a/Public/assets/css/index.css
+++ b/Public/assets/css/index.css
@@ -18,8 +18,7 @@ h4, .list-title {
 }
 
 form {
-  /* border-style: var(--border-style); */
-  border-style: none;
+  border-style: var(--border-style);
   border-top: transparent;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -53,19 +52,21 @@ main {
 }
 
 #search-container {
+  position: relative;
   border-radius: 5px;
+  margin-top: 33%;
+  padding:0;
   /* background-color: hsla(0,0%,0%,0.5); */
   /* background-color: hsla(34,25%,65%,0.4); */
   /* background-color: hsla(19,61%,35%,0.6); */
-  /* background-color: hsla(0,0%,50%,0.6); */
-  background-color: hsla(27, 84%, 85%,0.4);
-  /* background-color: #fff; */
-  padding:0;
+  /* background-color: hsla(0,0%,0%,0.4); */
+  /* background-color: hsla(27, 84%, 85%,0.4); */
+  background-color: #fff;
 }
 
 #search-bar {
   margin:0;
-  padding:5%;
+  padding:0 5% 0 5%;
   
 }
 
