more changes to index

--- a/Public/assets/css/index.css
+++ b/Public/assets/css/index.css
@@ -10,7 +10,7 @@ body {
 .Welcome{
   text-align: center;
   font-size: x-large;
-  color: #ce1823;
+  color: #fff;
 }
 
 h4, .list-title {
@@ -41,6 +41,7 @@ main {
 }
 
 .main-search-bar {
+  margin-top:0;
   display: flex;
   justify-content: start;
   align-content: center;
@@ -54,7 +55,7 @@ main {
 #search-container {
   position: relative;
   border-radius: 5px;
-  margin-top: 33%;
+  margin-top: 33vh;
   padding:0;
   /* background-color: hsla(0,0%,0%,0.5); */
   /* background-color: hsla(34,25%,65%,0.4); */
@@ -86,9 +87,13 @@ main {
     color: #94ab36;
 }
 
+#exclude-ingredient {
+  margin-top:0;
+}
+
 .spinner{
-    transform: rotate3d(1,1,0,180deg);
-    transition:cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.5s;
+  transform: rotate3d(1,1,0,180deg);
+  transition:cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.5s;
 }
 
 
