--- a/Public/assets/css/buttons.css
+++ b/Public/assets/css/buttons.css
@@ -2,6 +2,55 @@
     --button-colour:#94ab36;
 }
 
+button {
+    background-color: var(--button-colour);
+    border:none;
+    border-radius: 5px;
+    cursor: pointer;
+    object-position: center;
+}
+
+.nude-button {
+    display: block;
+    width: fit-content;
+    height: auto;
+    background-color: transparent;
+    transition:all 200ms ease-in-out;
+}
+
+.nude-button:hover, .nude-button:focus, .nude-button:active {
+    background-color: transparent;
+    transform: scale(1.5);
+}
+
+.top-right {
+    position: absolute;
+    top:0.5rem;
+    right:0.5rem;
+}
+
+.top-left {
+    position: absolute;
+    top:0.5rem;
+    left:0.5rem;
+}
+
+/* --------------- custom button properties ----------------------- */
+#add-to-list-btn {
+    margin-left: 10px;
+    margin-bottom: 13px;
+}
+
+/* .menu-button {
+    display: block;
+    width: fit-content;
+    height: auto;
+    background-color: transparent;
+    position: absolute;
+    top:0.5rem;
+    left:0.5rem;
+}
+
 .delete-button{
     width:fit-content;
     height:auto;
@@ -19,10 +68,4 @@
 .delete-button:hover, .delete-button:focus, .delete-button:active {
     background-color: transparent;
     transform: scale(1.5);
-}
-
-.btn {
-    background-color:var(--button-colour);
-    cursor: pointer;
-    object-position: center;
-}
+} */
