--- a/Public/assets/css/modal.css
+++ b/Public/assets/css/modal.css
@@ -14,7 +14,7 @@
 
 .recipe-modal, .shopping-list-modal, .create-recipe-modal {
     position: relative;
-    padding:10px;
+    padding:5vw;
     width: 90%;
     background-color: white;
     margin:auto;
@@ -27,15 +27,10 @@
     transition: all 500ms ease-in-out;
 }
 
-.create-recipe-modal {
-    /* custom stuff goes here */
-}
 
 @media (min-width: 768px) {
 
     .recipe-modal, .shopping-list-modal, .create-recipe-modal{
-        padding:20px;
         width:80%;
     }
-
 }
