delete methods for removing added dynamic content

--- a/Public/assets/css/create-recipe.css
+++ b/Public/assets/css/create-recipe.css
@@ -12,6 +12,10 @@
     justify-content: flex-start;
 }
 
+.Valign-between {
+    justify-content: space-evenly;
+}
+
 .xgap-tiny {
     margin: 0.5rem;
 }
