user details logged, ready to input to a db

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
         <div class="divider-filler"></div>
       </div>
       <div class="coloured-section">
-        <a href="/signup.html">
+        <a href="/login.html">
           <button id="sign-in-button"  class="btn-floating waves-effect waves-light z-depth-3">
             <i class="tiny material-icons">person</i>
           </a>
