added patch method at the user dashboard

--- a/Public/assets/css/buttons.css
+++ b/Public/assets/css/buttons.css
@@ -1,6 +1,7 @@
 :root {
     --button-colour:hsl(72, 52%, 44%);
-    --hover-colour:	hsl(72, 52%, 39%)
+    --hover-colour:	hsl(72, 52%, 39%);
+    --disabled-colour: hsl(72, 0%, 44%);
 }
 
 button, .anchor-btn {
@@ -47,11 +48,11 @@ button:active, .anchor-btn:active {
     left:0.5rem;
 }
 
-
 .zero {
     padding:0 !important;
     margin:0 !important;
 }
+
 
 /* --------------- custom button properties ----------------------- */
 #add-to-list-btn {
@@ -59,3 +60,14 @@ button:active, .anchor-btn:active {
     margin-bottom: 13px;
 }
 
+.disabled {
+    background-color: var(--disabled-colour);
+}
+
+.disabled:hover, .disabled:focus, .disabled:hover, .disabled:focus {
+    background-color: var(--disabled-colour);
+}
+
+.disabled:active, .disabled:active {
+    transform: none;
+}
