created a functions to render and display the modal

--- a/Public/assets/css/index.css
+++ b/Public/assets/css/index.css
@@ -79,27 +79,21 @@ main {
   margin-bottom:10px;
 }
 
-#search-button {
+#search-button, #search-fridge-button {
   font-size: 30px;
   margin-left:10px;
   cursor: pointer;
   transition:cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.5s;
 }
 
-#search-button:hover, #search-button:focus{
-    /* transform: scale(1.4); */
+#search-button:hover, #search-button:focus, #search-fridge-button:hover, #search-fridge-button:focus {
+    transform: scale(1.4);
     color: #94ab36;
     
 }
 
 #exclude-ingredient {
   margin-top:0;
-}
-
-.spinner:focus, .spinner, .spinner:hover {
-  transform: rotate3d(1,1,0,180deg);
-  transform: rotateX(180deg);
-  transition:cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.5s;
 }
 
 .spinner3D{
