--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,15 @@
     <link rel="stylesheet" href="./assets/css/buttons.css"/> 
     <link rel="stylesheet" href="./assets/css/nav.css"/> 
     <link rel="stylesheet" href="./assets/css/recipe-card.css"/> 
+
+     <link rel="stylesheet" href="./assets/css/index.css"/> 
+     <link rel="stylesheet" href="./assets/css/tabs.css"/> 
+     <link rel="stylesheet" href="./assets/css/buttons.css"/> 
+     <link rel="stylesheet" href="./assets/css/nav.css"/>
+     <link rel="stylesheet" href="./assets/css/modal.css">
+     <link rel="stylesheet" href="./assets/css/recipe-modal/visual-info.css">
+     <link rel="stylesheet" href="./assets/css/recipe-modal/recipe.css">
+     <link rel="stylesheet" href="./assets/css/shopping-list.css">
 </head>
 <body>
     {{{body}}}
