added cuisines and diets into recipe model

--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -85,13 +85,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- custom js -->
-    <script src="./../../public/assets/javascript/svgArc.js"></script>
-    <script src="./../../public/assets/javascript/activateTabs.js"></script>
+    {{!-- create recipe js --}}
     <script src="./../../public/assets/javascript/createRecipe.js"></script>
-    <script src="./../../public/assets/javascript/dashboard-logic.js"></script>
-    <script src="./../../public/assets/javascript/renderTimeBar.js"></script>
-    <script src="./../../public/assets/javascript/search.js"></script>
-    <script src="./../../public/assets/javascript/openModal.js"></script>
+
+    {{!-- modal-logic js --}}
+    <script src="./assets/javascript/modal-logic/addToFavourites.js"></script>
+    <script src="./assets/javascript/modal-logic/renderTime.js"></script>
+    <script src="./assets/javascript/modal-logic/shopping-list-logic.js"></script>
+    <script src="./assets/javascript/modal-logic/openModal.js"></script>
+
+    {{!-- dashboard js --}}
+    
+    <script src="./assets/javascript/renderTimeBar.js"></script>
+    <script src="./assets/javascript/search.js"></script>
+    <script src="./assets/javascript/openModal.js"></script>
+    <script src="./assets/javascript/dashboard-logic.js"></script>
 
 </body>
 </html>
